[gd_scene load_steps=10 format=4 uid="uid://da6hjhmj2565s"]

[ext_resource type="Script" uid="uid://c87qhg0p458jx" path="res://Scripts/levels/main_level.gd" id="1_vssyy"]
[ext_resource type="Texture2D" uid="uid://bkmtvogo0qgdb" path="res://Sprite/blocks/stone.png" id="2_dm32x"]
[ext_resource type="TileSet" uid="uid://drup5o6mkmkj" path="res://Scenes/levels/level_map.tres" id="3_lulqy"]
[ext_resource type="PackedScene" uid="uid://eb0hdrc8ajp7" path="res://Scenes/others/door.tscn" id="4_mu83d"]
[ext_resource type="PackedScene" uid="uid://wnxo61e0tny2" path="res://Scenes/entities/player.tscn" id="5_ff5u7"]
[ext_resource type="PackedScene" uid="uid://ckdbemdcfo55n" path="res://Scenes/controls/gui_control.tscn" id="6_4s8ld"]

[sub_resource type="ImageTexture" id="ImageTexture_chgb3"]

[sub_resource type="ImageTexture" id="ImageTexture_66jvn"]

[sub_resource type="ImageTexture" id="ImageTexture_sym6b"]

[node name="level_2" type="Node2D"]
top_level = true
script = ExtResource("1_vssyy")
min_index_music = 12
max_index_music = 13
light = Color(0.44548738, 0.44548798, 0.44548738, 1)
sky_texture = ExtResource("2_dm32x")
inf_sky = true
clouds = false
background_1_texture = SubResource("ImageTexture_chgb3")
background_2_texture = SubResource("ImageTexture_66jvn")
background_3_texture = SubResource("ImageTexture_sym6b")
brightness_power = 0.4
environment = 1

[node name="layer_light" type="CanvasModulate" parent="."]

[node name="layer_1" type="TileMapLayer" parent="."]
modulate = Color(0.92156863, 0.92156863, 0.92156863, 1)
z_index = -1
tile_map_data = PackedByteArray("AAD///7/AQAAAAAAFgD/////AQAAAAAAFgD+////AQAAAAAAFgD+/wAAAQAAAAAAFgD//wAAAQAAAAAAFgD//wEAAQAAAAAAFgAAAP//AQAAAAAAFgAAAAAAAQAAAAAAFgAAAAEAAQAAAAAAFgABAAAAAQAAAAAAFgABAAEAAQAAAAAAFgD9//7/AQAAAAAACwD9////AQAAAAAACwD9/wAAAQAAAAAACwD9/wEAAQAAAAAAFgD5/wEAAQAAAAAAAgD5/wAAAQAAAAAAAgD6/wEAAQAAAAAAAgD4/wEAAQAAAAAADgD9//v/AQAAAAAAAgD///r/AQAAAAAAAgACAPz/AQAAAAAAAgACAPv/AQAAAAAAAgADAPz/AQAAAAAAAgADAP3/AQAAAAAAAgAFAP7/AQAAAAAACwAFAP3/AQAAAAAACwAFAPz/AQAAAAAACwAFAPv/AQAAAAAACwAFAPr/AQAAAAAACwAAAPj/AQAAAAAADAABAPj/AQAAAAAADAADAPj/AQAAAAAADAACAPj/AQAAAAAADAABAPn/AQAAAAAACwABAPr/AQAAAAAACwABAPf/AQAAAAAACwAEAPr/AQAAAAAADAAGAP3/AQAAAAAADAD+/wEAAQAAAAAAFgD1//v/AQAAAAAAFgD1//z/AQAAAAAAFgD1//3/AQAAAAAAFgD2//z/AQAAAAAAFgD2//3/AQAAAAAAFgD0//z/AQAAAAAAFgD0//3/AQAAAAAAFgACAAEAAQAAAAAAFgAGAAMAAQAAAAAAEgAGAAQAAQAAAAAAEgAEAAMAAQAAAAAAEgAEAAQAAQAAAAAAEgAEAAUAAQAAAAAAEgAEAAYAAQAAAAAAEgADAAUAAQAAAAAAEgADAAQAAQAAAAAAEgAIAAEAAQAAAAAAEgD2//r/AQAAAAAADAD3//r/AQAAAAAADAA=")
tile_set = ExtResource("3_lulqy")

[node name="door" parent="." instance=ExtResource("4_mu83d")]
position = Vector2(0, 110)

[node name="layer_2" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD+//7/AQAAAAAAEgD///7/AQAAAAAAEgD/////AQAAAAAAEgD5/wIAAgAAAAAACgD9//7/AQAAAAAACgD+/wEAAgAAAAAABgADAPz/AgAAAAAAEAD0//3/AQAAAAAAAgD8//r/AgAAAAAAAQA=")
tile_set = ExtResource("3_lulqy")

[node name="player" parent="." instance=ExtResource("5_ff5u7")]
position = Vector2(-12, 257)
rotation = 0.000814613

[node name="layer_3" type="TileMapLayer" parent="."]
z_index = 1
tile_map_data = PackedByteArray("AAD+/wIAAwAAAAAAAgD//wIAAwAAAAAAAgAAAAIAAwAAAAAAAgABAAIAAwAAAAAAAgD//wMAAwAAAAAAAgD//wQAAwAAAAAAAgAAAAMAAwAAAAAAAgD+/wMAAwAAAAAAAgD//wUAAwAAAAAAAgAAAAQAAwAAAAAAAgAAAP7/AwAAAAAAAgD+//3/AwAAAAAAAgD///3/AwAAAAAAAgD+//z/AwAAAAAAAgD9//z/AwAAAAAAAgABAP7/AwAAAAAAAgAAAP3/AwAAAAAAAgD///z/AwAAAAAAAgD9/wIAAwAAAAAAAgACAAIAAwAAAAAAAgACAAAAAwAAAAAAAgACAP//AwAAAAAAAgADAP//AwAAAAAAAgADAAAAAwAAAAAAAgACAP7/AwAAAAAAAgACAP3/AwAAAAAAAgABAP3/AwAAAAAAAgAAAPz/AwAAAAAAAgABAPz/AwAAAAAAAgADAP7/AwAAAAAAAgABAAMAAwAAAAAAAgABAAQAAwAAAAAAAgAAAAUAAwAAAAAAAgAAAAYAAwAAAAAAAgAAAAcAAwAAAAAAAgACAAMAAwAAAAAAAgABAAUAAwAAAAAAAgADAAIAAwAAAAAAAgACAAQAAwAAAAAAAgADAAMAAwAAAAAAAgAEAP//AwAAAAAAAgABAP//AwAAAAAAAgD9//3/AwAAAAAAAgD8//3/AwAAAAAAAgD6/wIAAwAAAAAAAgD4/wIAAwAAAAAAAgD5/wMAAwAAAAAAAgD5/wQAAwAAAAAAAgD4/wMAAwAAAAAAAgD8//z/AwAAAAAAAgD///v/AwAAAAAAAgD///r/AwAAAAAAAgAAAPv/AwAAAAAAAgABAPv/AwAAAAAAAgD///n/AwAAAAAAAgAAAPr/AwAAAAAAAgD///j/AwAAAAAAAgD+//v/AwAAAAAAAgAFAP//AwAAAAAAAgADAP3/AwAAAAAAAgAEAP7/AwAAAAAAAgD7//z/AwAAAAAAAgD2//7/AwAAAAAAAgD1//7/AwAAAAAAAgD1////AwAAAAAAAgD0//7/AwAAAAAAAgD1/wAAAwAAAAAAAgD1/wEAAwAAAAAAAgD0////AwAAAAAAAgD0/wAAAwAAAAAAAgDz//7/AwAAAAAAAgDz////AwAAAAAAAgD0/wEAAwAAAAAAAgD0/wIAAwAAAAAAAgDz/wAAAwAAAAAAAgD0//v/AwAAAAAAAgD1//r/AwAAAAAAAgDz//3/AwAAAAAAAgDz//z/AwAAAAAAAgDy//3/AwAAAAAAAgDz//v/AwAAAAAAAgD0//n/AwAAAAAAAgD0//r/AwAAAAAAAgDz//r/AwAAAAAAAgDy//z/AwAAAAAAAgDy//7/AwAAAAAAAgAEAAIAAwAAAAAAAgAGAAIAAwAAAAAAAgAIAAAAAwAAAAAAAgA=")
tile_set = ExtResource("3_lulqy")

[node name="gui_control" parent="." instance=ExtResource("6_4s8ld")]
